# Light-weight-MPC

./: .gitignore  CMakeLists.txt  README.md  clean.sh  conanfile.txt  env.yml  example.cc  light_weight.yml  linux.yml  setup.sh  web.sh
Back-End/: CMakeLists.txt  README.md  emcc.sh  make.sh
Back-End/data/simulations/: sim_SingleWell.json
Back-End/include/model/: FSRModel.h  step_response_model.h
Back-End/src/: main.cc
Back-End/src/IO/: parse.cc
Back-End/vis/: npy-import.py  vis.ipynb
Front-End/: README.md
Front-End/src/: README.md  web.mjs
Front-End/src/Components/: Header.js  Simulation.js
MPC-simulator/: README.md  emcc.sh  lightweight.sh  make.sh  openloop.sh
MPC-simulator/data/scenarios/: sce_3.json  sce_SingleWell.json  sce_first_order_model.json  scenario_template.json
MPC-simulator/data/simulations/: sim_SingleWell.json  sim_first_order_model.json  sim_open_loop_SingleWell.json  sim_open_loop_SingleWell_test.json  sim_siso_test.json  sim_siso_test_quad_const.json
MPC-simulator/include/: openloop.h  simulations.h  tests.h
MPC-simulator/include/IO/: data_objects.h  json_specifiers.h  parse.h  serialize.h
MPC-simulator/include/model/: FSRModel.h  plant_model.h
MPC-simulator/include/wasm/: wasm.h
MPC-simulator/src/: main.cc  openloop.cc  simulations.cc  tests.cc
MPC-simulator/src/IO/: README.md  data_objects.cc  parse.cc  serialize.cc
MPC-simulator/src/MPC/: README.md  solvers.cc
MPC-simulator/src/model/: FSRModel.cc  plant_model.cc
MPC-simulator/src/wasm/: wasm.cc
MPC-simulator/vis/: OpenLoopData.py  SimulationData.py  plot.py  plot_func.py
Web-application/: README.md  package.json
Web-application/src/: README.md
Web-application/src/components/: Footer.js  Header.js  Modules.js  TabPanel.js
Web-application/src/css/: Modules.css
Web-application/src/utils/: IO.js  error.js  (+1 more)
back-end/: CMakeLists.txt  README.md  emcc.sh
back-end/data/scenarios/: sce_SingleWell.json  sce_siso_test.json
back-end/data/simulations/: sim_1.json
back-end/include/: LightWeightMPC.h
back-end/include/IO/: json_specifiers.h  parse.h  serialize.h
back-end/include/MPC/: solvers.h
back-end/include/OsqpEigen/: condensed_qp.h
back-end/include/model/: FSRModel.h  plant_model.h
back-end/src/: LightWeightMPC.cc  main.cc
back-end/src/IO/: README.md  data_objects.cc  parse.cc  serialize.cc
back-end/src/MPC/: README.md  condensed_qp.cc  solvers.cc
back-end/src/OsqpEigen/: condensed_qp.cc
back-end/src/bindings/: bindings.cc
back-end/src/model/: plant_model.cc
backend/: CMakeLists.txt  README.md  emcc.sh  make.sh
backend/data/scenarios/: sce_first_order_model.json  sce_siso_test.json
backend/data/simulations/: sim_2.json  sim_SingleWell.json  sim_open_loop_SingleWell.json  sim_siso_test.json  sim_siso_test_correct.json  test_sim.json
backend/data/systems/: first_order_model.json
backend/include/: simulations.h  tests.h
backend/include/IO/: data_objects.h  json_specifiers.h  parse.h  serialize.h
backend/include/MPC/: condensed_qp.h  solvers.h
backend/include/model/: FSRModel.h  first_order_model.h  step_response_model.h
backend/include/wasm/: wasm.h
backend/src/: LightWeightMPC.cc  main.cc  simulations.cc  tests.cc
backend/src/IO/: README.md  data_objects.cc  parse.cc  serialize.cc
backend/src/MPC/: README.md  condensed_qp.cc  solvers.cc
backend/src/bindings/: add.cc  bindings.cc
backend/src/model/: FSRModel.cc  README.md  first_order_model.cc  step_response_model.cc
backend/src/wasm/: bindings.cc  wasm.cc
backend/vis/: README.md  SimulationData.py  npy-import.py  plot.py  plot_func.py  vis.ipynb
conda/: light_weight.yml
data/: README.md
data/scenarios/: sce_2.json  sce_SingleWell.json  siso_test.json  sr_siso_test.json
data/simulations/: sim_3.json  sim_SingleWell.json  sim_open_loop_SingleWell.json  sim_sr_siso_test.json  test_sim.json
data/systems/: sr_SingleWell.json  sr_siso_test.json
env/: linux.yml  macos.yml
fig/: Logo.drawio  Logo_color.drawio  SingleWell.drawio  Untitled Diagram.drawio  dependancies.drawio  flow.drawio  lightweight toolchain.drawio  lightweightmpc_loop.drawio  mini_logo.drawio  module_diagram.drawio  mpc-simulator-structure.drawio  mpc_control_loop.drawio  mpc_principle.drawio  outputfeedback.drawio  receding_horizon.drawio  web-application-structure.drawio  webassembly.drawio
fig/Simulations/: first_order_model.eps
front-end/: README.md  package-lock.json  package.json
front-end/src/: App.js  web.mjs  webassembly.mjs  webassembly.wasm
frontend/: README.md  package.json
frontend/src/: App.js  README.md  web.mjs
include/: FSRCoefficients.h  FSRModel.h  LightWeightMPC.h  condensed_qp.h  data_objects.h  data_structs.h  example_mpc.h  formatting.h  json_specifiers.h  json_spesifiers.h  lightweight_MPC.h  parse.h  parser.h  reference_model.h  sr_solver.h  step_coefficients.h  step_response_model.h
include/IO/: data_objects.h  formatting.h  json_specifiers.h  parse.h  serialize.h  serializing.h  update.h
include/OSQP-Eigen/: condensed_qp.h  sr_solver.h  ss_solver.h
include/model/: FSRModel.h  reference_model.h  step_response_model.h
scenarios/: siso_test.json
src/: LightWeightMPC.cc  lightweight_MPC.cc  main.cc
src/IO/: README.md  data_objects.cc  data_structs.cc  formatting.cc  parse.cc  parser.cc  serialize.cc  serializing.cc  update.cc
src/MPC/: qp.cc
src/OSQP/: MPC.cc  README.md  example.cc
src/OSQP-Eigen/: README.md  condensed_qp.cc  example_mpc.cc  sr_solver.cc  ss_solver.cc
src/model/: FSRCoefficients.cc  FSRModel.cc  README.md  reference_model.cc  step_coefficients.cc  step_response_model.cc
src_cc/OsqpEigen/: condensed_qp.cc
src_cc/model/: step_response_model.cc
vis/: README.md  S_11_data.npy  S_12_data.npy  S_21_data.npy  S_22_data.npy  SimulationData.py  npy-import.py  plot.py  plot_func.py  vis.ipynb  visualization.ipynb
vis/.ipynb_checkpoints/: vis-checkpoint.ipynb
visualization/: SImulationData.py  SimulationData.py  parse.py  plot.py  visualization.ipynb
visualization/.ipynb_checkpoints/: visualization-checkpoint.ipynb
(+61 files in other folders)
